adicionado sobrenome da Maria, para Maria Eduarda

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <td>Programador</td>
             </tr>
             <tr>
-                <td>Maria</td>
+                <td>Maria Eduarda</td>
                 <td>23</td>
                 <td>Programadora</td>
             </tr>
